manifests/budibase-3.0.145.tgz-manifest.yaml
---
# Source: budibase/charts/couchdb/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-couchdb
  labels:
    app: couchdb
    chart: couchdb-4.5.6
    release: my-release
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: couchdb
      release: my-release
  ingress:
    - ports:
        - protocol: TCP
          port: 5984

        - protocol: TCP
          port: 4984 

    - ports:
        - protocol: TCP
          port: 9100
        - protocol: TCP
          port: 4369
      from:
        - podSelector:
            matchLabels:
              app: couchdb
              release: my-release
  policyTypes:
    - Ingress
---
# Source: budibase/charts/couchdb/templates/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-couchdb
  labels:
    app: couchdb
    chart: couchdb-4.5.6
    release: my-release
    heritage: Helm
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: couchdb
      port: 5984
  selector:
    app: couchdb
    release: my-release
---
# Source: budibase/charts/couchdb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-svc-couchdb
  labels:
    app: couchdb
    chart: couchdb-4.5.6
    release: my-release
    heritage: Helm
spec:
  ports:
    - port: 5984
      name: couchdb
      protocol: TCP
      targetPort: 5984
    
    - name: sqs
      port: 4984
      protocol: TCP
      targetPort: 4984
  type: ClusterIP
  selector:
    app: couchdb
    release: my-release
---
# Source: budibase/templates/app-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app-service
  name: app-service
spec:
  ports:
  - name: "4002"
    port: 4002
    targetPort: 4002
  selector:
    io.kompose.service: app-service
status:
  loadBalancer: {}
---
# Source: budibase/templates/minio-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: minio-service
  name: minio-service
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: minio-service
status:
  loadBalancer: {}
---
# Source: budibase/templates/proxy-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: budibase-proxy
  name: proxy-service
spec:
  ports:
  - name: "10000"
    port: 10000
    targetPort: 10000
  selector:
    app.kubernetes.io/name: budibase-proxy
status:
  loadBalancer: {}
---
# Source: budibase/templates/redis-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis-service
  name: redis-service
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    io.kompose.service: redis-service
status:
  loadBalancer: {}
---
# Source: budibase/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-budibase
  labels:
    helm.sh/chart: budibase-3.0.145
    app.kubernetes.io/name: budibase
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.28.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 10000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: budibase
    app.kubernetes.io/instance: my-release
---
# Source: budibase/templates/worker-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: worker-service
  name: worker-service
spec:
  ports:
  - name: "4003"
    port: 4003
    targetPort: 4003
  selector:
    io.kompose.service: worker-service
status:
  loadBalancer: {}
---
# Source: budibase/templates/app-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:

  labels:
    io.kompose.service: app-service

  name: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:

      labels:
        io.kompose.service: app-service

    spec:
      containers:
      - env:
        - name: BUDIBASE_ENVIRONMENT
          value: PRODUCTION
        - name: DEPLOYMENT_ENVIRONMENT
          value: "kubernetes"
        - name: COUCH_DB_URL
          
          value: http://my-release-svc-couchdb:5984
          
        
        
        - name: COUCH_DB_USER
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminUsername
        - name: COUCH_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminPassword
        
        - name: ENABLE_ANALYTICS
          value: "1"
        - name: API_ENCRYPTION_KEY
          value: ""
        - name: HTTP_LOGGING
          value: "1"
        - name: INTERNAL_API_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: internalApiKey
        - name: INTERNAL_API_KEY_FALLBACK
          value: ""
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: jwtSecret
        - name: JWT_SECRET_FALLBACK
          value: ""
        
        - name: MINIO_ENABLED
          value: "true"
        - name: MINIO_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreAccess
        - name: MINIO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreSecret
        - name: CLOUDFRONT_CDN
          value: ""
        - name: CLOUDFRONT_PUBLIC_KEY_ID
          value: ""
        - name: CLOUDFRONT_PRIVATE_KEY_64
          value: ""
        - name: MINIO_URL
          value: http://minio-service:9000
        - name: PLUGIN_BUCKET_NAME
          value: 
        - name: APPS_BUCKET_NAME
          value: 
        - name: GLOBAL_BUCKET_NAME
          value: 
        - name: BACKUPS_BUCKET_NAME
          value: 
        - name: TEMP_BUCKET_NAME
          value: ""
        - name: PORT
          value: "4002"
        
        - name: MULTI_TENANCY
          value: "0"
        - name: OFFLINE_MODE
          value: "0"
        - name: LOG_LEVEL
          value: "info"
        - name: REDIS_PASSWORD
          value: budibase
        - name: REDIS_URL
          
          value: redis-service:6379
          
        - name: SELF_HOSTED
          value: "1"
        - name: POSTHOG_TOKEN
          value: "phc_bIjZL7oh2GEUd2vqvTBH8WvrX0fWTFQMs6H5KQxiUxU"
        - name: WORKER_URL
          value: http://worker-service:4003
        - name: PLATFORM_URL
          value: ""
        - name: ACCOUNT_PORTAL_URL
          value: ""
        - name: ACCOUNT_PORTAL_API_KEY
          value: ""
        - name: COOKIE_DOMAIN
          value: ""
        - name: HTTP_MIGRATIONS
          value: "0"
        - name: GOOGLE_CLIENT_ID
          value: ""
        - name: GOOGLE_CLIENT_SECRET
          value: ""
        - name: AUTOMATION_MAX_ITERATIONS
          value: "200"
        - name: TENANT_FEATURE_FLAGS
          value: "*:LICENSING,*:USER_GROUPS,*:ONBOARDING_TOUR"
        - name: ENCRYPTION_KEY
          value: 
        
        
        
        
        
        
        
        
        
        - name: APP_FEATURES
          value: "api"
        image: budibase/apps:2.28.6
        imagePullPolicy: Always
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 5
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 3
        name: bbapps
        ports:
        - containerPort: 4002
        
        
        
        
          
      
      restartPolicy: Always
      serviceAccountName: ""
      
      
status: {}
---
# Source: budibase/templates/automation-worker-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:

  labels:
    io.kompose.service: automation-worker-service

  name: automation-worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: automation-worker-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:

      labels:
        io.kompose.service: automation-worker-service

    spec:
      containers:
      - env:
        - name: BUDIBASE_ENVIRONMENT
          value: PRODUCTION
        - name: DEPLOYMENT_ENVIRONMENT
          value: "kubernetes"
        - name: COUCH_DB_URL
          
          value: http://my-release-svc-couchdb:5984
          
        
        - name: COUCH_DB_USER
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminUsername
        - name: COUCH_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminPassword
        
        - name: ENABLE_ANALYTICS
          value: "1"
        - name: API_ENCRYPTION_KEY
          value: ""
        - name: HTTP_LOGGING
          value: 
        - name: INTERNAL_API_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: internalApiKey
        - name: INTERNAL_API_KEY_FALLBACK
          value: ""
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: jwtSecret
        - name: JWT_SECRET_FALLBACK
          value: ""
        
        - name: MINIO_ENABLED
          value: "true"
        - name: MINIO_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreAccess
        - name: MINIO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreSecret
        - name: CLOUDFRONT_CDN
          value: ""
        - name: CLOUDFRONT_PUBLIC_KEY_ID
          value: ""
        - name: CLOUDFRONT_PRIVATE_KEY_64
          value: ""
        - name: MINIO_URL
          value: http://minio-service:9000
        - name: PLUGIN_BUCKET_NAME
          value: 
        - name: APPS_BUCKET_NAME
          value: 
        - name: GLOBAL_BUCKET_NAME
          value: 
        - name: BACKUPS_BUCKET_NAME
          value: 
        - name: TEMP_BUCKET_NAME
          value: ""
        - name: PORT
          value: "4002"
        
        - name: MULTI_TENANCY
          value: "0"
        - name: OFFLINE_MODE
          value: "0"
        - name: LOG_LEVEL
          value: "info"
        - name: REDIS_PASSWORD
          value: budibase
        - name: REDIS_URL
          
          value: redis-service:6379
          
        - name: SELF_HOSTED
          value: "1"
        - name: POSTHOG_TOKEN
          value: "phc_bIjZL7oh2GEUd2vqvTBH8WvrX0fWTFQMs6H5KQxiUxU"
        - name: WORKER_URL
          value: http://worker-service:4003
        - name: PLATFORM_URL
          value: ""
        - name: ACCOUNT_PORTAL_URL
          value: ""
        - name: ACCOUNT_PORTAL_API_KEY
          value: ""
        - name: COOKIE_DOMAIN
          value: ""
        - name: HTTP_MIGRATIONS
          value: "0"
        - name: GOOGLE_CLIENT_ID
          value: ""
        - name: GOOGLE_CLIENT_SECRET
          value: ""
        - name: AUTOMATION_MAX_ITERATIONS
          value: "200"
        - name: TENANT_FEATURE_FLAGS
          value: "*:LICENSING,*:USER_GROUPS,*:ONBOARDING_TOUR"
        - name: ENCRYPTION_KEY
          value: 
        
        
        
        
        
        
        
        
        
        - name: APP_FEATURES
          value: "automations"

        image: budibase/apps:2.28.6
        imagePullPolicy: Always
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 30
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /health
            port: 4002
            scheme: HTTP
          periodSeconds: 3
        name: bbautomationworker
        ports:
        - containerPort: 4002
        
        
        
        
          
      
      restartPolicy: Always
      serviceAccountName: ""
      
      
status: {}
---
# Source: budibase/templates/minio-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: minio-service
  name: minio-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: minio-service
    spec:
      containers:
      - args:
        - server
        - /data
        image: minio/minio
        imagePullPolicy: ""
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 20
        name: minio-service
        ports:
        - containerPort: 9000
        
        volumeMounts:
        - mountPath: /data
          name: minio-data
        
      
      
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio-data
      
status: {}
---
# Source: budibase/templates/proxy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:

  labels:
    app.kubernetes.io/name: budibase-proxy

  name: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: budibase-proxy
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:

      labels:
        app.kubernetes.io/name: budibase-proxy

    spec:
      containers:
      - image: budibase/proxy:2.28.6
        imagePullPolicy: Always
        name: proxy-service
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 10000
            scheme: HTTP
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 10000
            scheme: HTTP
          periodSeconds: 5
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /health
            port: 10000
            scheme: HTTP
          periodSeconds: 3
        ports:
        - containerPort: 10000
      restartPolicy: Always
      serviceAccountName: ""
      
      
      
      
status: {}
---
# Source: budibase/templates/redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis-service
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: redis-service
    spec:
      containers:
      - args:
        - redis-server 
        - --requirepass 
        - budibase
        image: redis
        imagePullPolicy: ""
        name: redis-service
        ports:
        - containerPort: 6379
        
        volumeMounts:
        - mountPath: /data
          name: redis-data
        
      
      
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data
      

status: {}
---
# Source: budibase/templates/worker-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:

  labels:
    io.kompose.service: worker-service

  name: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:

      labels:
        io.kompose.service: worker-service

    spec:
      containers:
      - env:
        - name: BUDIBASE_ENVIRONMENT
          value: PRODUCTION
        - name: DEPLOYMENT_ENVIRONMENT
          value: "kubernetes"
        - name: CLUSTER_PORT
          value: "4003"
        
        - name: COUCH_DB_USER
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminUsername
        - name: COUCH_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: my-release-couchdb
              key: adminPassword
        
        - name: COUCH_DB_URL
          
          value: http://my-release-svc-couchdb:5984
          
        
        - name: API_ENCRYPTION_KEY
          value: ""
        - name: HTTP_LOGGING
          value: "1"
        - name: INTERNAL_API_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: internalApiKey
        - name: INTERNAL_API_KEY_FALLBACK
          value: ""
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: jwtSecret
        - name: JWT_SECRET_FALLBACK
          value: ""
        
        - name: MINIO_ENABLED
          value: "true"
        - name: MINIO_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreAccess
        - name: MINIO_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: my-release-budibase
              key: objectStoreSecret
        - name: MINIO_URL
          value: http://minio-service:9000
        - name: CLOUDFRONT_CDN
          value: ""
        - name: CLOUDFRONT_PUBLIC_KEY_ID
          value: ""
        - name: CLOUDFRONT_PRIVATE_KEY_64
          value: ""
        - name: PLUGIN_BUCKET_NAME
          value: 
        - name: APPS_BUCKET_NAME
          value: 
        - name: GLOBAL_BUCKET_NAME
          value: 
        - name: BACKUPS_BUCKET_NAME
          value: 
        - name: TEMP_BUCKET_NAME
          value: ""
        - name: PORT
          value: "4003"
        - name: MULTI_TENANCY
          value: "0"
        - name: OFFLINE_MODE
          value: "0"
        - name: LOG_LEVEL
          value: "info"
        - name: REDIS_PASSWORD
          value: "budibase"
        - name: REDIS_URL
          
          value: redis-service:6379
          
        - name: SELF_HOSTED
          value: "1"
        - name: ENABLE_ANALYTICS
          value: "1"
        - name: POSTHOG_TOKEN
          value: phc_bIjZL7oh2GEUd2vqvTBH8WvrX0fWTFQMs6H5KQxiUxU
        - name: ACCOUNT_PORTAL_URL
          value: ""
        - name: ACCOUNT_PORTAL_API_KEY
          value: ""
        - name: PLATFORM_URL
          value: ""
        - name: COOKIE_DOMAIN
          value: ""
        - name: SMTP_FALLBACK_ENABLED
          value: "false"
        - name: SMTP_USER
          value: ""
        - name: SMTP_PASSWORD
          value: ""
        - name: SMTP_HOST
          value: ""
        - name: SMTP_PORT
          value: "587"
        - name: SMTP_FROM_ADDRESS
          value: ""
        - name: APPS_URL
          value: http://app-service:4002
        - name: GOOGLE_CLIENT_ID
          value: ""
        - name: GOOGLE_CLIENT_SECRET
          value: ""
        - name: TENANT_FEATURE_FLAGS
          value: "*:LICENSING,*:USER_GROUPS,*:ONBOARDING_TOUR"
        - name: ENCRYPTION_KEY
          value: 
        
        
        
        
        
        image: budibase/worker:2.28.6
        imagePullPolicy: Always
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 4003
            scheme: HTTP
          periodSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4003
            scheme: HTTP
          periodSeconds: 5
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /health
            port: 4003
            scheme: HTTP
          periodSeconds: 3
        name: bbworker
        ports:
        - containerPort: 4003
        
        
        
        
           
      
      restartPolicy: Always
      serviceAccountName: ""
      
      
status: {}
---
# Source: budibase/charts/couchdb/templates/statefulset.yaml
apiVersion:  apps/v1
kind: StatefulSet
metadata:
  name: my-release-couchdb
  labels:
    app: couchdb
    chart: couchdb-4.5.6
    release: my-release
    heritage: Helm
spec:
  replicas: 1
  serviceName: my-release-couchdb
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: couchdb
      release: my-release
  template:
    metadata:
      labels:
        app: couchdb
        release: my-release
      annotations:
        checksum/config: a16dc58c08938a1bb2d5c5f8f70fdf0a98ce6b37be4b57ab3bc3507734768d6d
        checksum/secret: c185a985c96aaac86e8c3000c9f170797046282f19b775475ef1923aae638208
    spec:
      serviceAccountName: my-release-couchdb
      containers:
        - name: couchdb
          image: "budibase/couchdb:v3.3.3"
          imagePullPolicy: Always
          ports:
            - name: couchdb
              containerPort: 5984
            - name: epmd
              containerPort: 4369
            - containerPort: 9100

            - containerPort: 4984
              name: sqs

          livenessProbe:
            httpGet:
              path: /_up
              port: 5984
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /_up
              port: 5984
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
          - name: config-storage
            mountPath: /opt/couchdb/etc/default.d
          - name: database-storage
            mountPath: /opt/couchdb/data
      volumes:
        - name: config-storage
          emptyDir: {}
        - name: config
          configMap:
            name: my-release-couchdb
            items:
              - key: inifile
                path: chart.ini
              - key: seedlistinifile
                path: seedlist.ini
        - name: database-storage
          emptyDir: {}
---
# Source: budibase/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-budibase
  labels:
    helm.sh/chart: budibase-3.0.145
    app.kubernetes.io/name: budibase
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.28.6"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 10000
---
# Source: budibase/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-budibase-test-connection"
  labels:
    helm.sh/chart: budibase-3.0.145
    app.kubernetes.io/name: budibase
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.28.6"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-budibase:10000']
  restartPolicy: Never
